# pushto

./: .gitignore  README.md  pushto_default.cfg  pyproject.toml  requirements.txt  setup.py  tools
arduino/: SimpleEncoder.ino
docs/source/: code.rst  conf.py  config.rst  coords.rst  index.rst  installation.rst  scripts.rst  sketch.rst  stellarium.rst  telescope.rst  ui.rst
notebooks/: Pointing.ipynb  Pulley Problem.ipynb  Stellarium Remote API.ipynb
pushto/: alignment.py  check_encoders.py  check_stellarium.py  config.py  messages.py  pushto_default.cfg  site.py  stellarium.py  telescope.py  ui.py
pushto/tests/: test_alignment.py  test_config.py  test_messages.py  test_site.py  test_stellarium.py  test_telescope.py
scripts/: check_encoders  check_stellarium  fake_arduino  moni_listener  pushto
utils/: data.txt
